Fix alignment issue caused by scrollbar

--- a/src/intro.css
+++ b/src/intro.css
@@ -1,12 +1,14 @@
 .intro {
-	padding: 20px;
+	display: inline-block;
+	text-align: center;
+	width: 100%;
+	height: 100%;
+	padding-top: 15px;
 }
 
 .intro p {
-	padding-left: 30px;
-	padding-right: 30px;
-	padding-top: 10px;
 	text-align: left;
+	padding: 10px;
 }
 
 .intro .contact {
