--- a/src/sidebar.css
+++ b/src/sidebar.css
@@ -1,11 +1,10 @@
 .sidebar {
 	float: left;
+	position: fixed;
 	width: 180px;
-	margin-top: 15px;
 	border: 1px solid #e1e4e8;
 	border-radius: 6px;
 	background-color: #fafbfc;
-
 }
 .avatar {
 	display: flex;
